2013-06-11  David Malcolm  <dmalcolm@redhat.com>

	* final.c (debug_prefix_maps): Make static.

2013-06-11  David Malcolm  <dmalcolm@redhat.com>

	* function.c (initial_trampoline): Remove stray copy.

2013-06-11  Sofiane Naci  <sofiane.naci@arm.com>

	* config/aarch64/aarch64-simd.md (move_lo_quad_<mode>): Update.

2013-06-11  Martin Jambor  <mjambor@suse.cz>

	* ipa-cp.c (ipa_get_indirect_edge_target_1): Check that param_index is
	within bounds at the beginning of the function.

2013-06-11  Alan Modra  <amodra@gmail.com>

	* varasm.c (get_section): Don't die on !DECL_P decl.  Tidy error
	reporting.
	(get_named_section): Don't NULL !DECL_P decl.

2013-06-11  Igor Zamyatin  <igor.zamyatin@intel.com>

	* doc/invoke.texi (core-avx2): Document.
	(slm): Likewise.
	(atom): Updated with MOVBE.

2013-06-11  Richard Biener  <rguenther@suse.de>

	* collect2.c (main): Do not redirect ld stdout/stderr when
	debugging.

2013-06-11  Anton Blanchard  <anton@samba.org>

	* config/rs6000/rs6000.c (rs6000_adjust_atomic_subword): Calculate
	correct shift value in little-endian mode.

2013-06-11  Jakub Jelinek  <jakub@redhat.com>

	PR target/56564
	* varasm.c (get_variable_align): Move #endif to the right place.

2013-06-10  Cary Coutant  <ccoutant@google.com>

	* dwarf2out.c (hash_external_ref): Use die_symbol or signature
	for hash so that hash table traversal order is deterministic.

2013-06-10  Michael Meissner  <meissner@linux.vnet.ibm.com>
	    Pat Haugen <pthaugen@us.ibm.com>
	    Peter Bergner <bergner@vnet.ibm.com>

	* config/rs6000/vector.md (GPR move splitter): Do not split moves
	of vectors in GPRS if they are direct moves or quad word load or
	store moves.

	* config/rs6000/rs6000-protos.h (rs6000_output_move_128bit): Add
	declaration.
	(direct_move_p): Likewise.
	(quad_load_store_p): Likewise.

	* config/rs6000/rs6000.c (enum rs6000_reg_type): Simplify register
	classes into bins based on the physical register type.
	(reg_class_to_reg_type): Likewise.