@@ -1,3 +1,8 @@
+2013-06-11  DJ Delorie  <dj@redhat.com>
+
+	* config/rl78/rl78.c (TARGET_UNWIND_WORD_MODE): Define.
+	(rl78_unwind_word_mode): New.
+
 2013-06-11  David Malcolm  <dmalcolm@redhat.com>
 
 	* final.c (debug_prefix_maps): Make static.
